--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>Coral Springs, FL</title>
 </head>
 <!-- start body -->
+
 <body>
 
   <div id="navigation-container">
@@ -54,47 +55,94 @@
             <img src="public/images/girl-at-playground.jpg" alt="Girl Going Down Slide at Daytime Photo by nik radzi on Unsplash">
           </div>
           <div class="event-text">
-            <span class="event-title"><p>Labor Day BBQ</p></span>
-            <span class="event-date"><p>Monday, Sept. 2, 2019</p></span>
-            <span class="event-time"><p>12 - 4pm</p></span>
-            <span class="event-location"><p>Mullins Park</p></span>
-            <span class="event-blurb"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></span>
+            <ul>
+              <li><span class="event-title">
+                  <p>Labor Day BBQ</p>
+                </span></li>
+              <li><span class="event-date">
+                  <p>Monday, Sept. 2, 2019</p>
+                </span></li><br>
+              <li><span class="event-time">
+                  <p>12 - 4pm</p>
+                </span></li>
+              <li><span class="event-location">
+                  <p>Mullins Park</p>
+                </span></li>
+              <li><span class="event-blurb">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.</p>
+                </span>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-      <div class="card-container">
-        <div id="event-b">
-          <div class="event-picture">
-            <img src="public/images/shopping-mall.jpg" alt="People in Shopping Mall Photo by Marcin Kempa">
-          </div>
-          <div class="event-text">
-            <span class="event-title"><p>Mall Closed for Renovations</p></span>
-            <span class="event-date"><p>Sept. 3 - 5, 2019</p></span>
-            <span class="event-time"><p>Normal hours resume Friday</p></span>
-            <span class="event-location"><p>Coral Square Mall</p></span>
-            <span class="event-blurb"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></span>
-          </div>
-        </div>
-      </div>
-      <div class="card-container">
-        <div id="event-c">
 
+    <div class="card-container">
+      <div id="event-b">
+        <div class="event-picture">
+          <img src="public/images/shopping-mall.jpg" alt="People in Shopping Mall Photo by Marcin Kempa">
+        </div>
+        <div class="event-text">
+          <ul>
+            <li><span class="event-title">
+                <p>Mall Closed for Renovations</p>
+              </span></li>
+            <li><span class="event-date">
+                <p>Sept. 3 - 5, 2019</p>
+              </span></li>
+            <li><span class="event-time">
+                <p>Normal hours resume Friday</p>
+              </span></li>
+            <li><span class="event-location">
+                <p>Coral Square Mall</p>
+              </span></li>
+            <li><span class="event-blurb">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+              </span></li>
+          </ul>
         </div>
       </div>
     </div>
+    <div class="card-container">
+      <div id="event-c">
+        <div class="event-picture">
+          <img src="public/images/beach-by-drone.jpg" alt="Aerial Drone Photo of Beach in Australia by Shawnn Tan on Unsplash">
+        </div>
+        <div class="event-text">
+          <ul>
+            <li><span class="event-title">
+                <p>Annual Beach Clean Up</p>
+              </span></li>
+            <li><span class="event-date">
+                <p>October 12, 2019</p>
+              </span></li>
+            <li><span class="event-time">
+                <p>10am - 4pm</p>
+              </span></li>
+            <li><span class="event-location">
+                <p>The Beach</p>
+              </span></li>
+            <li><span class="event-blurb">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+              </span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
   </div>
 
 
   <footer>
     <div class="credit-text">
-      <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
-          href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-    </div>
-    <div>
-      Photo by Marcin Kempa on Unsplash
-    </div>
-    <div>
-      Photo by nik radzi on Unsplash
+      <li></li>
+      <li>Photo by Marcin Kempa on Unsplash</li>
+      <li>Photo by nik radzi on Unsplash</li>
+      <!-- <li>Photo by Bagus Hernawan on Unsplash</li> -->
+      <li>Photo by Shawnn Tan on Unsplash</li>
     </div>
   </footer>
 
