added google font to article card css

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="public/css/styles.css">
-  <script type="text/javascript" src="index.js">
 
-  </script>
+  <!-- external css -->
+  <link rel="stylesheet" href="public/css/styles.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+  <!-- javascript -->
+  <script type="text/javascript" src="index.js"></script>
+  <!-- page title -->
   <title>Coral Springs, FL</title>
+
 </head>
 <!-- start body -->
 
@@ -61,7 +66,7 @@
                 </span></li>
               <li><span class="event-date">
                   <p>Monday, Sept. 2, 2019</p>
-                </span></li><br>
+                </span></li>
               <li><span class="event-time">
                   <p>12 - 4pm</p>
                 </span></li>
