--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
   <!-- external css -->
   <link rel="stylesheet" href="public/css/styles.css">
+  <!-- bootstrap css -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-  <!-- javascript -->
-  <script type="text/javascript" src="index.js"></script>
   <!-- page title -->
   <title>Coral Springs, FL</title>
 
@@ -18,7 +18,8 @@
 
 <body>
 
-  <div id="navigation-container">
+  <section id="navigation-container">
+
     <table id="navigation-content">
       <tr>
         <td id="item-a">
@@ -40,10 +41,12 @@
         </td>
       </tr>
     </table>
-  </div>
+
+  </section>
 
 
-  <div id="homepage-container">
+  <section id="homepage-container">
+
     <div id="homepage-buttons">
       <button type="button" name="utility-billing" class="homepage-button-style">Utility Billing</button>
       <button type="button" name="parks-and-recreation" class="homepage-button-style">Parks and Recreation</button>
@@ -54,103 +57,95 @@
 
     <div id="upcoming-events">
       <h2>UPCOMING EVENTS</h2>
-      <div class="card-container">
-        <div id="event-a">
-          <div class="event-picture">
-            <img src="public/images/girl-at-playground.jpg" alt="Girl Going Down Slide at Daytime Photo by nik radzi on Unsplash">
-          </div>
-          <div class="event-text">
-            <ul>
-              <li><span class="event-title">
-                  <p>Labor Day BBQ</p>
-                </span></li>
-              <li><span class="event-date">
-                  <p>Monday, Sept. 2, 2019</p>
-                </span></li>
-              <li><span class="event-time">
-                  <p>12 - 4pm</p>
-                </span></li>
-              <li><span class="event-location">
-                  <p>Mullins Park</p>
-                </span></li>
-              <li><span class="event-blurb">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.</p>
-                </span>
-              </li>
-            </ul>
+
+      <div class="bd-example">
+  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div id="event-a" class="carousel-item active">
+        <img src="public/images/girl-at-playground.jpg" class="d-block w-100" alt="Girl Going Down Slide at Daytime Photo by Marcin Kempa on Unsplash">
+        <div class="carousel-caption d-none d-md-block">
+          <div class="card-body">
+            <h5 class="card-title">Labor Day BBQ</h5>
+            <p class="card-text">Monday, Sept. 2  |  Mullins Park<br>
+            12 - 4pm</p>
+            <a href="#" class="btn btn-primary">Read more</a>
           </div>
         </div>
       </div>
-
-    <div class="card-container">
-      <div id="event-b">
-        <div class="event-picture">
-          <img src="public/images/shopping-mall.jpg" alt="People in Shopping Mall Photo by Marcin Kempa">
+      <div id="event-b" class="carousel-item">
+        <img src="public/images/shopping-mall.jpg" class="d-block w-100" alt="Shopping Mall Photo by nik radzi on Unsplash">
+        <div class="carousel-caption d-none d-md-block">
+          <div class="card-body">
+            <h5 class="card-title">Mall Closed for Renovations</h5>
+            <p class="card-text">Sept. 3 - 5  |  Coral Square Mall<br>
+            Normal hours will resume on Friday</p>
+            <a href="#" class="btn btn-primary">Read more</a>
+          </div>
         </div>
-        <div class="event-text">
-          <ul>
-            <li><span class="event-title">
-                <p>Mall Closed for Renovations</p>
-              </span></li>
-            <li><span class="event-date">
-                <p>Sept. 3 - 5, 2019</p>
-              </span></li>
-            <li><span class="event-time">
-                <p>Normal hours resume Friday</p>
-              </span></li>
-            <li><span class="event-location">
-                <p>Coral Square Mall</p>
-              </span></li>
-            <li><span class="event-blurb">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-              </span></li>
-          </ul>
+      </div>
+      <div id="event-c" class="carousel-item">
+        <img src="public/images/beach-by-drone.jpg" class="d-block w-100" alt="Beach in Australia Shot by Drone Photo by Shawnn Tan on Unsplash">
+        <div class="carousel-caption d-none d-md-block">
+          <div class="card-body">
+            <h5 class="card-title">Annual Beach Clea Up</h5>
+            <p class="card-text">Saturday, Oct. 12  |  Ft. Lauderdale Beach<br>
+            Get involved with your friends and neighbors for the annual clean-up at the beach.</p>
+            <a href="#" class="btn btn-primary">Read more</a>
+          </div>
         </div>
       </div>
     </div>
-    <div class="card-container">
-      <div id="event-c">
-        <div class="event-picture">
-          <img src="public/images/beach-by-drone.jpg" alt="Aerial Drone Photo of Beach in Australia by Shawnn Tan on Unsplash">
-        </div>
-        <div class="event-text">
-          <ul>
-            <li><span class="event-title">
-                <p>Annual Beach Clean Up</p>
-              </span></li>
-            <li><span class="event-date">
-                <p>October 12, 2019</p>
-              </span></li>
-            <li><span class="event-time">
-                <p>10am - 4pm</p>
-              </span></li>
-            <li><span class="event-location">
-                <p>The Beach</p>
-              </span></li>
-            <li><span class="event-blurb">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-              </span></li>
-          </ul>
-        </div>
-      </div>
-    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-  </div>
+</div>
+</div>
+
+<div id="social-media">
+  <h2>CONNECT WITH US</h2>
+  <ul class="social-media-icons">
+    <li><img src="public/images/twitter.svg" alt="Twitter logo"></li>
+    <li><img src="public/images/instagram.svg" alt="Instagram logo"></li>
+    <li><img src="public/images/facebook.svg" alt="Facebook logo"></li>
+    <li><img src="public/images/youtube.svg" alt="Youtube logo"></li>
+  </ul>
+</div>
+
+</section>
 
 
-  <footer>
+  <section id="footer">
     <div class="credit-text">
       <li></li>
       <li>Photo by Marcin Kempa on Unsplash</li>
       <li>Photo by nik radzi on Unsplash</li>
       <!-- <li>Photo by Bagus Hernawan on Unsplash</li> -->
       <li>Photo by Shawnn Tan on Unsplash</li>
+      <li>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></li>
+      <li>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></li>
+      <li>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></li>
+      <li>Icons made by <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></li>
     </div>
-  </footer>
+  </section>
 
+
+  <!-- external javascript -->
+  <script type="text/javascript" src="index.js"></script>
+  <!-- bootstrap js -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
