add navbar to over1000.css

--- a/index.html
+++ b/index.html
@@ -41,8 +41,37 @@
           <img src="public/images/logo-full.png" alt="">
         </div>
     </div>
-
   </section>
+    <div id="over1000-navbar">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown link</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+      </nav>
+    </div>
 
 
   <section id="homepage-container">
@@ -59,11 +88,11 @@
       <div id="homepage-contact">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <h5 class="card-title">City Hall</h5>
+            <h6 class="card-subtitle mb-2 text-muted">9500 West Sample Road</h6>
+            <p class="card-text"><br>Monday - Thursday<br>7:30 a.m. to 5 p.m.<br>Friday<br>7:30 a.m. to 2:30 p.m.</p><br>
+            <a href="#" class="card-link">Citizen Services:</a><br>
+            <a href="#" class="card-link">954-344-1000</a>
           </div>
         </div>
       </div>
