--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
   <!-- external css -->
   <link rel="stylesheet" href="public/css/styles.css">
-  <link rel="stylesheet" media="screen and (min-device-width:500px)" href="public/css/over500.css">
+  <link rel="stylesheet" media="screen and (min-width:500px)" href="public/css/over500.css">
   <link rel="stylesheet" media="screen and (min-width:1000px)" href="public/css/over1000.css">
+  <link rel="stylesheet" media="screen and (min-width:1400px)" href="public/css/over1400.css">
   <!-- bootstrap css -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- Google Fonts -->
@@ -44,7 +45,7 @@
   </section>
     <div id="over1000-navbar">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#"><img src="public/images/sunny.svg" alt="Made by Freepik on flaticon.com"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -54,18 +55,22 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Living</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">Visiting</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Business</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown link</a>
+              Government</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">City Hall</a>
+              <a class="dropdown-item" href="#">Utility Billing</a>
+              <a class="dropdown-item" href="#">Departments</a>
+              <a class="dropdown-item" href="#">Staff Directory</a>
             </div>
           </li>
         </ul>
@@ -77,7 +82,27 @@
   <section id="homepage-container">
 
     <div id="homepage-picture">
-      <img src="public/images/downtown-coral-springs.jpg" alt="Photo of  event in downtown Coral Springs">
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="public/images/downtown-coral-springs.jpg" alt="Photo of  event in downtown Coral Springs">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="public/images/Jim-Gallucci-Coral-Springs-FL-Sign.jpg" alt="Waterjet Sculpture by Jim Gallucci, installed at Coral Springs City Hall grounds.">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="public/images/waterfront-at-night.jpg" alt="Photo of Water Fountain at Night">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </div>
     <div id="homepage-buttons">
       <button type="button" name="utility-billing" class="homepage-button-style"><img src="public/images/trashcan.svg" class="homepage-button-icons" alt="trash can icon"><br>Utility Billing</button>
@@ -170,6 +195,7 @@
 
   <section id="footer">
     <div class="credit-text">
+      <p>Made with &hearts; in Austin, TX</p>
       <ul>
         <li>Photo by Marcin Kempa on Unsplash</li>
         <li>Photo by nik radzi on Unsplash</li>
@@ -183,6 +209,7 @@
         <li>Icons made by <a href="https://www.flaticon.com/authors/kiranshastry" title="Kiranshastry">Kiranshastry</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></li>
         <li>Icons made by <a href="https://www.flaticon.com/authors/zlatko-najdenovski" title="Zlatko Najdenovski">Zlatko Najdenovski</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></li>
         <li>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></li>
+        <li>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></li>
       </ul>
     </div>
   </section>
